<resources>
    <string name="app_name">BMI FrontEnd</string>
    <string name="enter_goal_bmi">Ex: 24.9</string>
    <string name="set_your_bmi_goal">Set your BMI Goal:</string>
    <string name="empty_bmi_result">--</string>
    <string name="your_bmi_level">Your BMI Level:</string>
    <string name="calculate">Calculate</string>
    <string name="height">Height (cm)</string>
    <string name="gender">Sex</string>
    <string name="weight">Weight (kg)</string>
    <string name="age">Age</string>
    <string name="set_goal">Set Goal</string>
    <string name="ageTextInputLayout">Age</string>
    <string name="weightTextInputLayout">Weight</string>
    <string name="heightTextInputLayout">Height</string>
    <string name="womanImgBtn">Woman</string>
    <string name="manImgBtn">Man</string>

    <!-- BMI Goal Dialog -->
    <string name="set_bmi_goal">Set BMI Goal</string>
    <string name="current_bmi">Current BMI:</string>
    <string name="goal_bmi">Goal BMI (e.g., 22.5)</string>
    <string name="your_progress">Your Progress</string>
    <string name="bmi_remaining">BMI Remaining:</string>
    <string name="cancel">Cancel</string>

    <!-- Firebase/Google Sign-In -->
    <string name="default_web_client_id">703565416770-PLACEHOLDER.apps.googleusercontent.com</string>

    <!-- Facebook App ID - You need to get this from Facebook Developer Console -->
    <string name="facebook_app_id">866344092480665</string>
    <string name="facebook_client_token">7a7aad0d84691bb5835d0edfa00ae7ff</string>
    <string name="fb_login_protocol_scheme">fb866344092480665</string>
    <string name="google_client_id">703565416770-qhba7oa478mp9gr37rk188obh9rultpr.apps.googleusercontent.com</string>

    <string-array name="spinner_items">
        <item>Male</item>
        <item>Female</item>
        <item>Gook</item>
    </string-array>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="continue_as_guest">Continue as a guest</string>
    <string name="plant_decoration">Plant decoration</string>

    <!-- Login Screen -->
    <string name="welcome_back">Welcome back! Glad\nto see you. Again!</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">Or Login with</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>

    <!-- Register Screen -->
    <string name="hello_register">Hello! Register to get\nstarted</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or_register_with">Or Register with</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_now">Login Now</string>

    <!-- Common -->
    <string name="back">Back</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="google_login">Login with Google</string>
    <string name="apple_login">Login with Apple</string>

    <!-- Profile Menu -->
    <string name="profile_menu">Profile Menu</string>
    <string name="go_to_history">Go to history</string>
    <string name="go_to_statistics">Go to statistics</string>
    <string name="go_to_notifications">Go to notifications</string>

    <!-- Profile/Navigation -->
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="notifications">Notifications</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="no_history">No measurements yet</string>
    <string name="no_statistics">No data available</string>

    <!-- Statistics -->
    <string name="bmi_statistics">BMI Statistics</string>
    <string name="weight_statistics">Weight Statistics</string>
    <string name="activity_statistics">Activity</string>
    <string name="total_measurements">Total Measurements</string>
    <string name="average_bmi">Average BMI</string>
    <string name="current_bmi_stat">Current BMI</string>
    <string name="goal_bmi_stat">Goal BMI</string>
    <string name="start_weight">Start Weight</string>
    <string name="current_weight_stat">Current</string>
    <string name="goal_weight_stat">Goal</string>
    <string name="weight_change">Weight Change</string>
    <string name="days_active">Days Active</string>
    <string name="last_measurement">Last Check</string>

    <!--User History Page-->
    <string name="bmi_history">BMI History</string>
    <string name="no_records_found">No Records Found</string>
    <string name="your_bmi_records">Your BMI Records</string>
    <string name="item_measurement_menu">Item History Menu</string>
    <string name="edit_measurement">Edit</string>
    <string name="delete_measurement">Delete</string>
    <string name="desc_settings">Open settings</string>
</resources>