<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fbf8f3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back"
            app:icon="@drawable/ic_back"
            app:iconSize="24dp"
            app:iconTint="@android:color/black"
            android:backgroundTint="#FFFFFF"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:backgroundTint="#FFFFFF" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#1A2332"
            android:text="@string/bmi_history" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emptyState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_no_records_found"
            app:tint="#9E9E9E"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/no_records_found"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#6A707C"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_bmi_records"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="#9E9E9E"
            android:gravity="center"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:visibility="visible"/>
</LinearLayout>